Make card alignment more uniform, fixes #3

--- a/res/css/components/card.css
+++ b/res/css/components/card.css
@@ -11,6 +11,13 @@
     max-width: 440px;
 }
 
+.card .card-banner {
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .card .card-banner img {
     max-height: 450px;
 }
